--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,109 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+img{
+    height: 100px;
+    width: 100px;
+    border-radius: 15%;
+}
 body{
-    background-color: black;
+    background-color: burlywood;
+    height: 100vh;
+    width: 100vw;
+    display: grid;
+    grid-template-rows: 1fr 5fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 
+    "header header"
+    "body body"
+    "footer footer";
+}
+li{
+    list-style: none;
+}
+#content{
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas:
+    "img menu"
+    "img awards";
+}
+.menu-sample{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+}
+.menu-title{
+    font-weight: bold;
+    font-size: 18px;
+}
+.menu-sample,
+.awards{
+    padding: 20px;
+}
+.body-img{
+    justify-self: center;
+    align-self: center;
+    grid-area: img;
+    height: 70%;
+    width: 70%;
+}
+#header{
+    grid-area: header;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+    padding: 20px;
+}
+.header-buttons{
+    display: flex;
+    height: 100%;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.header-title{
+    font-size: 25px;
+    font-weight: bold;
+}
+#content{
+    grid-area: body;
+}
+
+.awards img{
+    height: 200px;
+    width: 200px;
+}
+.awards{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+#footer{
+    padding: 20px;
+    grid-area: footer;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+}
+.footer-buttons{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 100%;
+    width: 100%;
+}
+
+#header,
+#content,
+#footer{
+    border-radius: 15px;
+    margin: 0.5% 2% 0.5% 2%;
+    background-color: beige;
 }
