--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,75 @@
+*{
+    margin: 0;
+    padding: 0;
+    /* White text */
+    color: white;
+}
+:root{
+    --background-color: rgba(177, 177, 177, 0.3);
+}
 body{
-    background-color: black;
+    background-color: rgb(97, 52, 1);
+    height: 100vh;
+    width: 100vw;
+    display: grid;
+    grid-template-rows: 1fr 5fr;
+    justify-content: center;
+}
+#navbar,
+#content{
+    height: 100%;
+    width: 100%;
+}
+#content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.content-container{
+    background-color: var(--background-color);
+    width: 60%;
+    height: 80%;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.content-text{
+    margin: 50px;
+}
+.content-img{
+    margin: 50px;
+    height: 50%;
+    width: 80%;
+}
+#navbar{
+    display: flex;
+    justify-content: center;
+}
+.navbar-content{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 15px;
+    background-color: var(--background-color);
+    border-radius: 15px;
+    height: 50%;
+    width: 50%;
+    padding: 20px;
+    margin: 20px;
+}
+.navbar-buttons{
+    display: flex;
+    justify-content: space-around;
+    flex-grow: 1;
+    align-items: center;
+}
+.navbar-img{
+    height: 100px;
+    width: 100px;
+}
+
+li{
+    list-style: none;
 }
